--- a/structure_design.ipynb
+++ b/structure_design.ipynb
@@ -6,19 +6,20 @@
             "source": [
                 "# RNA Structure Generation\n",
                 "\n",
-                "Some random structures generated using the defined Context-Free Grammar (CFG)."
+                "This notebook generates random RNA secondary structures using a weighted Context-Free Grammar (CFG). \n",
+                "We will generate multiple datasets with different properties (length, stack weights, unpaired weights)."
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 11,
             "metadata": {},
             "outputs": [],
             "source": [
                 "import random\n",
                 "import sys\n",
                 "\n",
-                "\n",
+                "# Increase recursion depth to handle long structures and deep nestings\n",
                 "sys.setrecursionlimit(10000)\n",
                 "\n",
                 "def countS(n,cache,weight_unpaired,weight_stack):\n",
@@ -97,77 +98,188 @@
                 "                r -= countT(i,cache,weight_unpaired,weight_stack)*countT(n-2-i,cache,weight_unpaired,weight_stack)\n",
                 "                if r<0:\n",
                 "                    return \"(\"+generateT(i,cache,weight_unpaired,weight_stack)+\")\"+generateT(n-2-i,cache,weight_unpaired,weight_stack)\n",
-                "    return None"
+                "    return None\n",
+                "\n",
+                "def generate_and_save(filename, n_structures, length, w_unpaired, w_stack):\n",
+                "    \"\"\"Helper function to generate structures and save to file\"\"\"\n",
+                "    cache = {}\n",
+                "    structures = []\n",
+                "    print(f\"Generating {n_structures} structures (L={length}, Wu={w_unpaired}, Ws={w_stack})...\")\n",
+                "    for i in range(n_structures):\n",
+                "        s = generateS(length, cache, w_unpaired, w_stack)\n",
+                "        if s:\n",
+                "            structures.append(s)\n",
+                "    \n",
+                "    with open(filename, \"w\") as f:\n",
+                "        for s in structures:\n",
+                "            f.write(s + \"\\n\")\n",
+                "    print(f\"Saved {len(structures)} structures to '{filename}'\")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "### 1. Standard Set\n",
+                "Length: 100, balanced weights."
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 12,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "Generating 20 structures of length 100...\n",
-                        "1: ((((((((((())))))((()))((()((((...))))))(((((((()((((()))())(.)))(((((((.()(.))))))()))))))))))..)))\n",
-                        "2: .(((()))(()(((((((((()(((((())((((...))))))))))))(...((((())((()(((()))(.)(()))).))(())))))))))))...\n",
-                        "3: ()(((())((((((())(((((((((())(())())((((....))))))))))))())(((((((())))))))(()))((()))))))..(((())))\n",
-                        "4: (((((((()()((()).)((()))))))))(((((((()...()))((((((()(((((((((.))))(((.))))))))(.)..))))))())))))).\n",
-                        "5: .(((((((((((...))(((((((((()))())))))())))(((()(((((((((()(.(()))))))))))))(()())))))))(())))()))...\n",
-                        "6: ((((()())((()(.)))(((()).)()())()))((((((((((((((.(()))))))))))))))((.))(..(((()((((()))))))))))(())\n",
-                        "7: (((((((((((((((((())))(())))))))())((((((()).((()()))))))()(((((((((()).)))))))))))))))(((())()))())\n",
-                        "8: .((((()(.))))((((.)(.((((((((((.)((((.(()))))))(())((...(()(((()))))))))))((())))))))))(((()).()))))\n",
-                        "9: (((.(()))(.)(((()()((((())))(((()))))((())(()(.))))))))(..((((()(())))))(((((((...))))))(()(.))))(.)\n",
-                        "10: (()((((((()(((((.)(((.)))))))))()))))((())((..((.)(()))..().)()(((()))((((.)()))))((.)(())(()).)).))\n",
-                        "11: (((())((((((())))))))((()))((()((((((..(.).)(.(..).))))((((.))))))))((((((().)()(((()()))))))))).().\n",
-                        "12: (()()((((.)))((()(((((((((()))(()).)))(())))()(((()))())((())((()))(.))))))))(((()((((((()))))))))).\n",
-                        "13: .(((((((((()))((()))))))))((((((()()))(((((()))(()(((.)))(((())))())))).))(((...()))((((()))()))))))\n",
-                        "14: ((()(((((((((())())))))())(.()))))(.(((((())(((.)())(((()(.)))())()))(.()..((())((())()))().).))))).\n",
-                        "15: (((())(((((((((((((((())()))))(.()))())((()()))))((()((((((((())))))(((()))).)()))))))((.))))))))(.)\n",
-                        "16: (((((.((((.((((((()((((..(((((((.))((())))())))).)))))())))))..))()(((.)))(())))))).))((((())))(.)).\n",
-                        "17: (((()()))()((((((((((((()(((()(())())))))(((((((.))((.))(((.)))(())))))))).((.)).)()))))))(((())))))\n",
-                        "18: ()(())(((()((()))((((((()(..)))()))(((().)((((((((()))))))())))...)))(.).((((.)(())((.))))((.)))))).\n",
-                        "19: ..((()(((.)((()))(((()))(((((((((()))((.(..).)))))))))(()(((((((.)..().)))(()))))))(((())))))))(()).\n",
-                        "20: (((()(((((((((())(..(.)(((((())))))())))))(((((((()))))((((((())))))))))()(()))))())).)(((((()))))))\n",
-                        "\n",
-                        "Structures saved to 'generated_structures.txt'\n"
+                        "Generating 20 structures (L=100, Wu=1.0, Ws=1.0)...\n",
+                        "Saved 20 structures to 'structures_standard_L100.txt'\n"
                     ]
                 }
             ],
             "source": [
-                "N_STRUCTURES = 20\n",
-                "LENGTH = 100\n",
-                "WEIGHT_UNPAIRED = 1.0\n",
-                "WEIGHT_STACK = 10\n",
-                "\n",
-                "cache = {}\n",
-                "structures = []\n",
-                "\n",
-                "print(f\"Generating {N_STRUCTURES} structures of length {LENGTH}...\")\n",
-                "for i in range(N_STRUCTURES):\n",
-                "    s = generateS(LENGTH, cache, WEIGHT_UNPAIRED, WEIGHT_STACK)\n",
-                "    structures.append(s)\n",
-                "    print(f\"{i+1}: {s}\")\n",
-                "\n",
-                "with open(\"generated_structures.txt\", \"w\") as f:\n",
-                "    for s in structures:\n",
-                "        f.write(s + \"\\n\")\n",
-                "\n",
-                "print(\"\\nStructures saved to 'generated_structures.txt'\")"
+                "generate_and_save(\n",
+                "    filename=\"structures_standard_L100.txt\",\n",
+                "    n_structures=20,\n",
+                "    length=100,\n",
+                "    w_unpaired=1.0,\n",
+                "    w_stack=1.0\n",
+                ")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "### 2. Short & Highly Structured\n",
+                "Length: 50, high stack weight ($w_s=5.0$) creates more base pairs."
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 13,
             "metadata": {},
-            "outputs": [],
-            "source": []
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Generating 20 structures (L=50, Wu=0.5, Ws=5.0)...\n",
+                        "Saved 20 structures to 'structures_short_structured_L50.txt'\n"
+                    ]
+                }
+            ],
+            "source": [
+                "generate_and_save(\n",
+                "    filename=\"structures_short_structured_L50.txt\",\n",
+                "    n_structures=20,\n",
+                "    length=50,\n",
+                "    w_unpaired=0.5,\n",
+                "    w_stack=5.0\n",
+                ")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "### 3. Long & Unstructured\n",
+                "Length: 200, high unpaired weight ($w_u=2.0$) creates more loops and unpaired regions."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 14,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Generating 20 structures (L=200, Wu=2.0, Ws=0.5)...\n",
+                        "Saved 20 structures to 'structures_long_unstructured_L200.txt'\n"
+                    ]
+                }
+            ],
+            "source": [
+                "generate_and_save(\n",
+                "    filename=\"structures_long_unstructured_L200.txt\",\n",
+                "    n_structures=20,\n",
+                "    length=200,\n",
+                "    w_unpaired=2.0,\n",
+                "    w_stack=0.5\n",
+                ")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "### 4. Unpaired Bias\n",
+                "Length: 100. Very high unpaired weight ($w_u=5.0$)."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 15,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Generating 20 structures (L=100, Wu=5.0, Ws=1.0)...\n",
+                        "Saved 20 structures to 'structures_unpaired_bias_L100.txt'\n"
+                    ]
+                }
+            ],
+            "source": [
+                "generate_and_save(\n",
+                "    filename=\"structures_unpaired_bias_L100.txt\",\n",
+                "    n_structures=20,\n",
+                "    length=100,\n",
+                "    w_unpaired=5.0,\n",
+                "    w_stack=1.0\n",
+                ")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "### 5. Stack Bias\n",
+                "Length: 100. Very high stack weight ($w_s=5.0$)."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 16,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Generating 20 structures (L=100, Wu=1.0, Ws=5.0)...\n",
+                        "Saved 20 structures to 'structures_stack_bias_L100.txt'\n"
+                    ]
+                }
+            ],
+            "source": [
+                "generate_and_save(\n",
+                "    filename=\"structures_stack_bias_L100.txt\",\n",
+                "    n_structures=20,\n",
+                "    length=100,\n",
+                "    w_unpaired=1.0,\n",
+                "    w_stack=5.0\n",
+                ")"
+            ]
         }
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "viennarna",
+            "display_name": "Python 3",
             "language": "python",
             "name": "python3"
         },
@@ -181,7 +293,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.19"
+            "version": "3.8.5"
         }
     },
     "nbformat": 4,
